<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="number1">Nhập số thứ 1</string>
    <string name="number2">Nhập số thứ 2</string>
    <string name="result">Kết quả</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
</resources>
